--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -25,21 +25,18 @@
    "source": [
     "**Abstract**\n",
     "\n",
-    "Region growing is an interesting approach for image segmentation. It is possible to divide it into unseeded and seeded\n",
-    "region growing. Image segmentation is used to evaluate microscopy images and detecting cell structures. In seeded region\n",
-    "growing, seeds are selected for regions based on similarity and relative Euclidean distance of intensity. From these\n",
-    "regions, the unsorted pixels are assigned to the region with the most similar mean intensity. In unseeded region growing\n",
-    "random pixels are the start point. From these larger regions grow or build new regions. Regions are merged at the end\n",
-    "according to intensity similarity and certain size criteria.\n",
-    "For difficult datasets, preprocessing and adjusting the parameters for merging are implemented to reduce noise and\n",
-    "focus on the important information. The dice score evaluates the result by comparison with a manually segmented ground\n",
-    "truth image. The method leads to very good results with high dice scores up to 0.99 for simple segmentation tasks. The\n",
-    "algorithm also works well on difficult data with a higher cell density and more noise with a dice score of ??.\n",
-    "Vectorization allows acceptable speeds despite large required computing power by assigning each pixel individually and\n",
-    "updating the mean values of the growing region. However, this also shows the difficulties of the method. Simultaneous\n",
-    "assignment of the pixels could lead to equally good results and faster run time. However, bright spots with the same\n",
-    "intensity as nuclei remain a problem. With improving the run time and automatic determination of the parameters combined\n",
-    "with better preprocessing, a robust algorithm would be received.\n",
+    "Region growing is an interesting approach for image segmentation which can be used to evaluate microscopy images and detecting cell structures.\n",
+    "It is further divided it into seeded and unseeded region growing. <br>\n",
+    "In this project, algorithms for both seeded and unseeded region growing are implemented and executed on the datasets N2DH-GOWT1, N2DL-HeLa and NIH3T3.\n",
+    "Preprocessing and parameter adjustment for merging is applied for difficult datasets to reduce noise and focus on the important information.\n",
+    "The dice score evaluates the result and the performance of the algorithm by comparing the segmented images to a manually segmented ground truth image. <br>\n",
+    "Both seeded and unseeded region growing algorithms lead to very good results with high dice scores up to 0.99 for simple segmentation tasks.\n",
+    "The vectorization of the algorithm allows acceptable speeds despite the large computing power required, since each pixel is assigned individually and intermediate steps in the algorithm are permanently updated.\n",
+    "A simultaneous allocation of the pixels could lead to equally good results and faster runtime.\n",
+    "Interfering image elements with strongly deviating pixel intensities compared to their neighborhood are still a challenge to be overcome.\n",
+    "Even after applying the algorithm, some pixels will not be segmented properly and must be added by manual parameter determination. <br>\n",
+    "With an improvement of the runtime by simultaneous assignment of the pixels and automatic parameter determination in combination with better preprocessing, these challenges could be mastered and a more robust algorithm could be obtained.\n",
+    "\n",
     "\n",
     "\n",
     "<br>"
@@ -58,17 +55,39 @@
     "3.\tImports\n",
     "4.\tPreprocessing <br>\n",
     "4.1 Clipping <br>\n",
-    "4.2 XXX filter <br>\n",
-    "5.\tSeeded region growing algorithm <br>\n",
-    "5.1 Seed selection <br>\n",
-    "5.1.1 Seed selection based on similarities <br>\n",
-    "5.1.2 Seed selection based on Eucledian distance <br>\n",
-    "5.2 Seeded region growing <br>\n",
-    "5.2.1 Seeded region growing based on selected seeds <br>\n",
-    "5.3 Seeded region merging <br>\n",
-    "5.3.1 Seeded region merging based on similarity of intensity <br>\n",
+    "4.2 Filtering <br>\n",
+    "5.\tSegmentation algorithm <br>\n",
+    "5.1 Seeded region growing algorithm <br>\n",
+    "5.1.1 Seed selection <br>\n",
+    "5.1.1.1 Seed selection based on similarities <br>\n",
+    "5.1.1.2 Seed selection based on Eucledian distance <br>\n",
+    "5.1.2 Seeded region growing <br>\n",
+    "5.2 Unseeded region growing algorithm <br>\n",
+    "5.3 Region merging <br>\n",
+    "5.3.1 Region merging based on similarity of intensity <br>\n",
     "5.3.2 Region merging based on size <br>\n",
-    "6.\tUnseeded region growing algorithm\n",
+    "5.4 Differences between seeded and unseeded region growing <br>\n",
+    "6.\tEvaluation measures <br>\n",
+    "6.1 Dice score <br>\n",
+    "7. Results <br>\n",
+    "7.1 N2DH-GOWT1 <br>\n",
+    "7.2 N2DL-HeLa <br>\n",
+    "7.2.1 Shifted intensity range in N2DL-HeLa <br>\n",
+    "7.2.2 High cell density and intensity differences of nuclei <br>\n",
+    "7.2.3 Final results <br>\n",
+    "7.3 NIH3T3 <br>\n",
+    "7.3.1 Bright spots in NIH3T3 data set <br>\n",
+    "7.3.2 Blurs in NIH3T3 data set <br>\n",
+    "7.3.3 Changing background intensities <br>\n",
+    "7.3.4 Final results <br>\n",
+    "7.4 Evaluation of preprocessing <br>\n",
+    "7.5 Comparison Seeded and Unseeded region growing <br>\n",
+    "8. Challenges <br>\n",
+    "8.1 Optimizing Seeded region growing Algorithm <br>\n",
+    "8.2 Optimizing Unseeded region growing Algorithm <br>\n",
+    "8.3 Comparison Seeded and Unseeded region growing <br>\n",
+    "8.4 Memory error <br>\n",
+    "9. Discussion\n",
     "\n",
     "<br>"
    ],
@@ -141,7 +160,8 @@
    "source": [
     "# Imports\n",
     "\n",
-    "The python modules numpy, skimage and self-implemented modules were used."
+    "In order to test the implemented algorithm, initial uploads of the datasets and various modules were made. <br>\n",
+    "The modules access self-implemented functions in other notebooks or import python modules lieke numpy, skimage and medpy."
    ],
    "metadata": {
     "collapsed": false
@@ -181,8 +201,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The test data sets are added to the Git project. Consequently, they can be accessed on PyCharm and displayed through\n",
-    "the following functions. Here an example image of each data set is shown."
+    "The test data sets were uploaded to the GitHub.\n",
+    "Consequently, they can be accessed and displayed on PyCharm.\n",
+    "Here an image of each data set is shown."
    ],
    "metadata": {
     "collapsed": false
@@ -330,7 +351,7 @@
     "Seeded region growing is a sub-method of image segmentation.\n",
     "It consists of the determination of initial seeds, followed by the assignment of pixels to the seeds, known as seeded region growing.\n",
     "Regions can then be combined in region merging.\n",
-    "The implementation of the seeded region algorithm is based on the paper of Frank Y. Shih and Shouxian Cheng."
+    "The implementation of the seeded region algorithm is based on the paper of Frank Y. Shih and Shouxian Cheng (Shih and Cheng, 2005)."
    ],
    "metadata": {
     "collapsed": false
@@ -348,6 +369,7 @@
     "To evaluate the similarity, the standard deviation $$\\sigma$$ of each pixel to its 3x3 neighborhood is calculated:\n",
     "\n",
     "$$ \\sigma = \\sqrt{\\left(\\frac{1}{9}\\sum\\limits_{i=1}^{9}(x_i-\\overline{x}\\right)^2}$$\n",
+    "\n",
     "with $$x_i$$ as pixel intensities and $$\\overline{x_i}$$ as the mean intensities of the 3x3 neighborhood of a pixel.\n",
     "$$\\sigma$$ is then normalized by dividing by the maximum value of all calculated standard deviations and the similarity $$s$$ is obtained from the following equation:\n",
     "\n",
@@ -374,8 +396,8 @@
     "$$d_{max}$$ is then also compared to the threshold.\n",
     "If $$d_{max}$$ is lower than the threshold, the pixel is considered a seed.\n",
     "\n",
-    "The implemented algorithm results in the following seeds (right).\n",
-    "For visualization the  algorithm is applied to a section of the loaded image (left)."
+    "For visualization the  algorithm is applied to a section of the loaded image (left).\n",
+    "The implemented algorithm results in the following seeds (right)."
    ],
    "metadata": {
     "collapsed": false,
@@ -513,7 +535,8 @@
     "## Unseeded region growing algorithm\n",
     "Furthermore, another region growing algorithm was implemented. In difference to seeded region growing where several pixels are detected before the algorithm start, in unseeded region growing only one start pixel is chosen randomly. The algorithm is similar to seeded region growing and follows the steps below:\n",
     "1. Based on the first seed the neighboring pixel are selected and stored in 2d numpy arrays for left, right top and bottom neighbors.\n",
-    "1. The intensity distance of these neighboring pixels to the start region is calculated according to $$dist = |p - \\bar r_n|$$.\n",
+    "1. The intensity distance of these neighboring pixels to the start region is calculated according to <br>\n",
+    "$$dist = |p - \\bar r_n|$$\n",
     "1. The smallest distance and the associated pixel are selected.\n",
     "1. This pixel is now labeled. For labeling three options exist:\n",
     "1. If the intensity distance of the pixel is smaller than a threshold, the pixel is merged to its neighboring region\n",
@@ -576,7 +599,8 @@
     "The first selection criteria is implemented via the following procedure:\n",
     "1. First the neighboring regions are determined for every region and stored in a 2d numpy array.\n",
     "1. This is used to calculate the distances between all neighboring regions which are stored in an upper triangle 2d\n",
-    "numpy array. The distance between two regions is calculated using $$dist = \\frac{\\bar r_m - \\bar r_n}{intensity_{max}}$$.\n",
+    "numpy array. The distance between two regions is calculated using <br>\n",
+    "$$dist = \\frac{\\bar r_m - \\bar r_n}{intensity_{max}}$$\n",
     "1. Then the most similar regions are selected and merged.\n",
     "1. This procedure is repeated until the distance between the most similar regions is bigger than a threshold. For that, in every\n",
     "iteration the mean intensity value of the newly merged region, and the distances to its neighboring regions are updated.\n",
@@ -639,7 +663,7 @@
    "cell_type": "markdown",
    "source": [
     "The figures compare the over-segmented image with the merged image after region merging by intensity\n",
-    "similarity, with the image after complete merging, and with the clipped image (image from left to right).\n",
+    "similarity, with the image after complete merging, and with the clipped image (from left to right).\n",
     "The first row shows the results of seeded region growing.\n",
     "In the second row the results of unseeded region growing can be seen.\n",
     "\n",
@@ -683,9 +707,9 @@
     "This makes it possible to consider small and bigger regions equally.\n",
     "This is important in nuclei detection because there are proportionally few nuclei compared to the background.\n",
     "So loosing nuclei would not have such a high impact on the unweighted dice score as desired.\n",
-    "\n",
+    "<br>\n",
     "$$\\overline{DSC}=\\frac{1}{2} \\sum\\limits_{i=1}^{2} \\left(\\frac{2 \\times |S_i \\cap G_i|}{|S_i|+|G_i|}\\right)$$\n",
-    "\n",
+    "<br>\n",
     "In this case two regions were considered: nuclei and background. For each region, the dice score was calculated\n",
     "individually and then weighted equally.\n",
     "For implementation, the background was defined as the largest region and all other regions were considered as nuclei\n",
@@ -696,7 +720,7 @@
     "# Results\n",
     "## N2DH-GOWT1\n",
     "The result of the seeded region growing on the image t01 of the N2DH-GOWT1 is shown below\n",
-    "(original image, result of seeded region growing, result after merging and clipping, gt image from left to right).\n",
+    "(original image, result of seeded region growing, result after merging and clipping, gt image (from left to right)).\n",
     "An unweighted dice score of 0.982, and a weighted dice score of 0.928 were obtained.\n",
     "\n",
     "Comparing the original image with the segmentation result all visible nuclei were caught.\n",
@@ -1025,7 +1049,7 @@
     "This happens because the reflection leads to a smaller intensity difference between background and nucleus.\n",
     "\n",
     "### Blurs in NIH3T3 data set\n",
-    "Another Challenge we had to face is, that some images of the third data set contained blurs, that are\n",
+    "Another Challenge that had to be faced is, that some images of the third data set contained blurs, that are\n",
     "smaller than the nuclei but have similar intensities. They are registered as a region which mean is\n",
     "relatively close to a region of a nuclei and are therefore merged to the nuclei even if the threshold\n",
     "for merging by intensity is low. With merging by size, the blurs are merged to the nuclei. This\n",
@@ -1294,8 +1318,8 @@
     "# Challenges\n",
     "## Runtime errors\n",
     "### Optimizing Seeded Region Growing Algorithm\n",
-    "The paper (Quelle) the used seeded region growing algorithm is based on labels every pixel one by one which leads to\n",
-    "long runtimes. That's why many runtime problems were encountered, especially with the first seeded region growing\n",
+    "The paper of Frank Y. Shih and Shouxian Cheng (Shih and Cheng, 2005) on which the used seeded region growing algorithm is based labels every pixel one by one which leads to\n",
+    "long runtimes. This is why many runtime problems were encountered, especially with the first seeded region growing\n",
     "algorithm implemented.\n",
     "\n",
     "In the first region growing algorithm all pixels bordering an existing region are stored in a list. For loops are used\n",
