--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -76,11 +76,11 @@
     "7.3.3 Changing background intensities <br>\n",
     "7.3.4 Final results <br>\n",
     "7.4 Evaluation of preprocessing <br>\n",
-    "7.5 Comparison Seeded and Unseeded region growing <br>\n",
+    "7.5 Comparison Seeded and unseeded region growing results <br>\n",
     "8. Challenges <br>\n",
-    "8.1 Optimizing Seeded region growing Algorithm <br>\n",
-    "8.2 Optimizing Unseeded region growing Algorithm <br>\n",
-    "8.3 Comparison Seeded and Unseeded region growing <br>\n",
+    "8.1 Optimizing Seeded region growing algorithm <br>\n",
+    "8.2 Optimizing Unseeded region growing algorithm <br>\n",
+    "8.3 Comparison Seeded and Unseeded region growing algorithms <br>\n",
     "8.4 Memory error <br>\n",
     "9. Discussion\n",
     "10. Bibliography\n",
@@ -229,7 +229,8 @@
     "For clipping, a pre-implemented method from the numpy module is used.\n",
     "\n",
     "In addition, a separate method was implemented in which the values below or above the thresholds were set to the minimum and maximum intensities of the image.\n",
-    "This variant is intended to increase the contrast of the combined intensities to the remaining:"
+    "This variant is intended to increase the contrast of the combined intensities to the remaining.\n",
+    "Below the unclipped picture (left), the normal clipped picture (middle) and the picture clipped with the self implemented funtion (right) are shown:"
    ],
    "metadata": {
     "collapsed": false
@@ -525,7 +526,7 @@
     "The first row shows the results of seeded region growing.\n",
     "In the second row the results of unseeded region growing can be seen.\n",
     "\n",
-    "## Differences between seeded and unseeded region growing\n",
+    "## Differences between Seeded and Unseeded region growing\n",
     "In seeded region growing the pixels of one region are always connected while in unseeded region growing,\n",
     "pixels which are assigned to the same region, but are not connected can appear.\n",
     "This leads to differences in the region merging process. While region merging by intensity distance\n",
@@ -926,7 +927,7 @@
     "The highest score was obtained with median filtering (0.9839) opposed to seeded region growing, followed by clipping (0.9835).\n",
     "Compared to seeded region growing unseeded region growing showed better results overall.\n",
     "\n",
-    "## Comparison seeded and unseeded region growing\n",
+    "## Comparison Seeded and Unseeded region growing results\n",
     "For both, seeded and unseeded region growing, parameters need to be determined for every image and data set individually.\n",
     "However, after optimizing preprocessing methods and parameters unseeded region growing lead to better results,\n",
     "especially in challenging data sets. This can be seen in the bar chart below."
@@ -954,7 +955,7 @@
    "source": [
     "# Challenges\n",
     "## Runtime errors\n",
-    "### Optimizing Seeded Region Growing Algorithm\n",
+    "### Optimizing Seeded region growing algorithm\n",
     "The paper of Frank Y. Shih and Shouxian Cheng (Shih and Cheng, 2005) on which the used seeded region growing algorithm is based labels every pixel one by one which leads to\n",
     "long runtimes. This is why many runtime problems were encountered, especially with the first seeded region growing\n",
     "algorithm implemented.\n",
@@ -995,7 +996,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Optimizing Unseeded Region Growing Algorithm\n",
+    "### Optimizing Unseeded region growing algorithm\n",
     "The in the paper of Zheng Lin, Jesse Jin and Hugues Talbot (Lin et al., 2000) proposed unseeded region growing algorithm leads to the same problem. Because every pixel is\n",
     "selected separately, the runtime of the first implemented algorithm is too long to segment a complete image with our\n",
     "available hardware.\n",
@@ -1025,7 +1026,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Comparison of Seeded and Unseeded Region Growing\n",
+    "### Comparison of Seeded and unseeded region growing algorithm\n",
     "Whilst comparing both algorithms, no significant runtime difference between both algorithms can be discovered if\n",
     "compared on a small image. The runtime difference lies within the $$3 \\sigma$$ interval."
    ],
@@ -1109,6 +1110,8 @@
     "\n",
     "1. Lin, Z., Jin, J., and Talbot, H. (2000). Unseeded region growing for 3D image segmentation. In Selected papers from the Pan-Sydney workshop on Visualisation - Volume 2 (Sydney, Australia: Australian Computer Society, Inc.), pp. 31–37.\n",
     "1. Shih, F.Y., and Cheng, S. (2005). Automatic seeded region growing for color image segmentation. Image and Vision Computing 23, 877-886.\n",
+    "1. Gómez, O., Gonzalez, J., and Morales, E. (2007). Image Segmentation Using Automatic Seeded Region Growing and Instance-Based Learning, Vol 4756.\n",
+    "\n",
     "\n",
     "\n",
     "\n"
