--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -23,23 +23,23 @@
     "# Abstract\n",
     "\n",
     "Region growing is an interesting approach for image segmentation which can be used to evaluate microscopy images and\n",
-    "detecting cell structures. It is divided it into seeded and unseeded region growing where pixels are assigned to regions\n",
-    "for segmentation purposes. These two methods differ mainly in the start pixels from which a new region can be grown.\n",
-    "Unseeded region growing starts with a random pixel and seeded region growing calculates initial seeds. Small and similar\n",
-    "regions are merged in the end.\n",
+    "to detect cellular structures like nuclei.\n",
+    "Two implementation methods are seeded and unseeded region growing where pixels are assigned to regions.\n",
+    "These two methods differ mainly in the start pixels from which a new region can be grown.\n",
+    "Unseeded region growing starts with a random pixel and seeded region growing calculates initial seeds. Afterwards,\n",
+    "similar regions are merged.\n",
     "\n",
     "In this project, algorithms for seeded and unseeded region growing are implemented and executed on the datasets\n",
     "N2DH-GOWT1, N2DL-HeLa and NIH3T3. Preprocessing and parameter adjustment are applied for difficult datasets to reduce\n",
-    "noise and focus on important information. The dice score evaluates the result and the performance of the algorithm by\n",
-    "comparing the segmented images to a manually segmented ground truth image.\n",
+    "noise and focus on important information. The dice score is used to evaluate the result of the algorithm by\n",
+    "comparing the segmented images to a manually segmented ground truth images.\n",
     "\n",
-    "Both seeded and unseeded region growing algorithms lead to good results with high dice scores up to 0.99 for simple\n",
-    "segmentation tasks. Large computing power is required since each pixel is assigned individually and intermediate steps\n",
-    "have to be updated permanently. However, vectorization can lead to an acceptable speed.  Simultaneous allocation of the\n",
-    "pixels could yield to equally good results and faster runtime. Interfering image elements with strongly deviating pixel\n",
-    "intensities compared to their neighborhood are still a challenge to be overcome. All parameters for preprocessing, seed\n",
-    "detection and merging must be determined manually. Improving the runtime by simultaneous assignment of the pixels and\n",
-    "better preprocessing could lead to a more robust algorithm. Automatic parameter determination would simplify the\n",
+    "Both seeded and unseeded region growing algorithms lead to good results with high dice scores up to 0.99 for plain\n",
+    "images. Large computing power is required because each pixel is assigned individually.\n",
+    "However, vectorization can lead to an acceptable speed. Simultaneous allocation of more than one\n",
+    "pixel could yield to equally good results and faster runtime. Interfering image elements with intensities similar to\n",
+    "nuclei are still a challenge to be overcome. All parameters for preprocessing, seed\n",
+    "detection and merging must be determined manually. Automatic parameter determination would simplify the\n",
     "application of the algorithm."
    ],
    "metadata": {
@@ -104,7 +104,7 @@
     "\n",
     "Image segmentation is an image processing method in the field of data analysis, which role has become increasingly\n",
     "important in recent years.\n",
-    "It consists in grouping pixels of an image by similarity of image intensities and thus creating regions of pixels\n",
+    "It consists of grouping pixels of an image by similarity of image intensities and thus creating regions of pixels\n",
     "that can be used for data analysis and evaluation.\n",
     "In this way, image content can be simplified, and its representation can be modified by using methods like\n",
     "thresholding, boundary or region-based segmentation or hybrid techniques.\n",
@@ -117,7 +117,7 @@
     "neighborhood if the pixels have a high intensity similarity. Subsequently, certain found regions are merged if they\n",
     "are similar in their mean intensity or if they are to small (Shih and Cheng, 2005). In unseeded region growing, the\n",
     "region growing is initiated using a start pixel. Another threshold is used and if the intensity distance of a newly\n",
-    "assigned pixel is too high, a new region is formed. After unseeded region growing, region merging is also performed.\n",
+    "assigned pixel is too high, a new region is formed. After unseeded region growing, region merging is performed as well.\n",
     "\n",
     "After implementing the seeded region growing algorithm, its performance will be evaluated.\n",
     "For this, result images are compared to already segmented gt-images, and a Dice score is evaluated.\n",
@@ -172,8 +172,8 @@
     "# Imports\n",
     "\n",
     "In order to test the implemented algorithm, initial uploads of the datasets and various modules were made. <br>\n",
-    "The modules access self-implemented functions in other notebooks or import python modules\n",
-    "like numpy, skimage, pandas and seaborn."
+    "The modules access self-implemented functions in other notebooks or import the python modules\n",
+    "numpy, skimage, pandas and seaborn."
    ],
    "metadata": {
     "collapsed": false
@@ -254,9 +254,6 @@
     "For instance, background noise can be decreased, and the essential content of the image can be brought out.\n",
     "However, it is crucial to avoid losing relevant information by overuse of preprocessing.\n",
     "\n",
-    "The algorithm will be applied a section of unprocessed and preprocessed images.\n",
-    "By comparing the result images the influence of preprocessing can be tested.\n",
-    "\n",
     "## Clipping\n",
     "With the clipping method, all intensity values of an image below or above manually defined thresholds will be set to\n",
     "these thresholds.\n",
@@ -301,7 +298,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In order to reduce disturbances of the image caused by very bright intensity values, the functions remove_bright_spots\n",
+    "In order to reduce disturbances of an image caused by very bright intensity values, the functions remove_bright_spots\n",
     "and remove_bright_spots_with_border were implemented. The first method sets the intensity values of bright spots to an\n",
     "intensity similar to the background.\n",
     "The second method clips the bright spot together with a border around the bright spots of variable size.\n",
@@ -383,7 +380,6 @@
     "One concerns the similarity, the other the maximal Euclidean distance of a pixel to its neighborhood.\n",
     "\n",
     "#### Seed selection based on similarities\n",
-    "\n",
     "To evaluate the similarity, the standard deviation $$\\sigma$$ of each pixel to its 3x3 neighborhood is calculated:\n",
     "\n",
     "$$ \\sigma = \\sqrt{\\left(\\frac{1}{9}\\sum\\limits_{i=1}^{9}(x_i-\\overline{x}\\right)^2}$$\n",
@@ -593,7 +589,7 @@
    "cell_type": "markdown",
    "source": [
     "## Region merging\n",
-    "In both algorithms, seeded and unseeded region growing too many regions are received due to intensity differences\n",
+    "In both algorithms, seeded and unseeded region growing, too many regions are received due to intensity differences\n",
     "in the background as well as in the cell nuclei.\n",
     "To solve this over-segmentation a region merging algorithm was implemented.\n",
     "The received regions are merged based on two criteria: similarity of intensity values and region size.\n",
@@ -675,8 +671,8 @@
     "pixels which are assigned to the same region, but are not connected can appear.\n",
     "This leads to differences in the region merging process. While region merging by intensity distance\n",
     "leads to good results for seeded region growing, for unseeded region growing pixels of the cell nucleus are easily\n",
-    "merged to the background and build holes within the nuclei. Because of that, a small threshold needs to be chosen for region\n",
-    "merging by similarity of intensity.\n",
+    "merged to the background and build holes within the nuclei. Because of that, a small threshold needs to be chosen for\n",
+    "region merging by similarity of intensity.\n",
     "\n",
     "Region merging by size leads to better results, although some unconnected pixel remain.\n",
     "That's because in unseeded region growing regions are not limited to one nucleus.\n",
@@ -684,8 +680,8 @@
     "This resulted in spots, which resembled salt and pepper noise.\n",
     "\n",
     "In order to improve our result,\n",
-    "a median filter with a 3x3 sized filter mask was used. This improved the Dice score. When using a\n",
-    "bigger filter size, the holes within the nuclei shrink, which is an improvement, but nuclei that are\n",
+    "a median filter with a 3x3 sized filter mask was used on the image after region merging. This improved the Dice score.\n",
+    "When using a bigger filter size, the holes within the nuclei shrink, which is an improvement, but nuclei that are\n",
     "only partly detected are merged to the background and lost. However, focus was laid on detecting all nuclei, even if\n",
     "they are only partly detected. Following this, a filter with size 3 was used.\n",
     "\n",
@@ -716,10 +712,10 @@
     "$$\\overline{DSC}=\\frac{1}{2} \\sum\\limits_{i=1}^{2} \\left(\\frac{2 \\times |S_i \\cap G_i|}{|S_i|+|G_i|}\\right)$$\n",
     "<br>\n",
     "In this case two regions were considered: nuclei and background. For each region, the Dice score was calculated\n",
-    "individually and then weighted equally by calculating their mean.\n",
+    "individually and then weighted equally by calculating their mean value.\n",
     "For implementation, the background was defined as the largest region and all other regions were considered as nuclei\n",
     "in order to create a binary array.\n",
-    "This makes it possible to compare the gt and the result images without depending on equal region numbers\n",
+    "This makes it possible to compare the gt, and the result images without depending on equal region numbers\n",
     "for every nucleus.\n",
     "\n",
     "# Results\n",
@@ -808,12 +804,11 @@
    "cell_type": "markdown",
    "source": [
     "## N2DL-HeLa\n",
-    "\n",
     "### Shifted intensity range in N2DL-HeLa\n",
-    "For seed detection in the seeded region growing algorithm an otsu-threshold is used.\n",
-    "Since normalized intensity distances are used, it is necessary to normalize the otsu-threshold.\n",
+    "For seed detection in the seeded region growing algorithm an Otsu threshold is used.\n",
+    "Since normalized intensity distances are used, it is necessary to normalize the Otsu threshold.\n",
     "This works fine in images with an intensity range starting from 0.\n",
-    "In the N2DL-Hela data set though a very high otsu-threshold was obtained due to the normalization on an intensity range\n",
+    "In the N2DL-Hela data set though a very high Otsu threshold was obtained due to the normalization on an intensity range\n",
     "between 33000 and 36000. This lead to memory errors because of too many seeds and resulted in worse algorithm outcomes\n",
     "after seeded region growing and region merging because of decreased normalized intensity distances.\n",
     "Subtracting the minimal image intensity and thereby shifting the intensity range solves this issue.\n",
@@ -876,7 +871,7 @@
     "To improve the results of seeded region growing, the normal image (first image) was preprocessed with the following\n",
     "functions and parameters:\n",
     "- ip.subtract_minimum: image\n",
-    "- ip.image_clipping: image, 0.05 * np.amax(image), 0.15 * np.amax(image)\n",
+    "- ip.image_clipping: image, 0.05 * max(image), 0.15 * max(image)\n",
     "- ip.median_filter: image, 3\n",
     "\n",
     "For seeded region growing (second image), the parameter 0.05 was used for the sd.seeds function and 20 for the\n",
@@ -898,7 +893,7 @@
     "\n",
     "A reason why more nuclei are lost compared to the first data set are the higher cell density,\n",
     "and less intensity distances between background and nuclei. Unseeded region growing seems to be more robust,\n",
-    "while in seeded region growing seed detection in all nuclei was difficult.\n"
+    "while in seeded region growing seed detection in all nuclei was difficult."
    ],
    "metadata": {
     "collapsed": false
@@ -1017,7 +1012,7 @@
     "### Blurs in NIH3T3 data set\n",
     "Another Challenge that had to be faced is, that some images of the third data set contained blurs, that are\n",
     "smaller than the nuclei but have similar intensities. They are registered as a region which mean is\n",
-    "relatively close to a region of a nuclei and are therefore merged to the nuclei even if the threshold\n",
+    "relatively close to a region of nuclei and are therefore merged to nuclei even if the threshold\n",
     "for merging by intensity is low. With merging by size, the blurs are merged to the nuclei. This\n",
     "happens because their intensities are more similar to the nuclei than the background."
    ],
@@ -1246,7 +1241,7 @@
     "For both, seeded and unseeded region growing, parameters need to be determined for every image and data set\n",
     "individually.\n",
     "However, after optimizing preprocessing methods and parameters unseeded region growing lead to better results,\n",
-    "especially in challenging data sets. This can be seen in the bar chart below."
+    "especially in challenging data sets. This can be seen in the bar chart below.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -1281,9 +1276,7 @@
    "cell_type": "markdown",
    "source": [
     "# Challenges\n",
-    "\n",
     "## Runtime errors\n",
-    "\n",
     "### Optimizing Seeded region growing algorithm\n",
     "The paper of Frank Y. Shih and Shouxian Cheng (Shih and Cheng, 2005), on which the implemented seeded region growing algorithm\n",
     "is based, labels every pixel one by one leading to\n",
@@ -1344,7 +1337,8 @@
     "selected separately, the runtime of the first implemented algorithm is too long to segment a complete image with our\n",
     "available hardware.\n",
     "\n",
-    "That's why the algorithm was rewritten similarly to the seeded region growing algorithm. The runtime incresed by nearly 100\n",
+    "That's why the algorithm was rewritten similarly to the seeded region growing algorithm.\n",
+    "The runtime increased by nearly 100\n",
     "times."
    ],
    "metadata": {
@@ -1409,6 +1403,7 @@
     "is needed. If too many seeds are found in the seed detection, too many regions are detected in the seeded region\n",
     "growing, and the region merging algorithm can not be performed. When trying to do so, a memory error occurs.\n",
     "That's why a method to reduce the seed number was implemented.\n",
+    "In unseeded region growing less regions occur which solves this problem right away.\n",
     "\n",
     "# Discussion\n",
     "Despite the challenges of the different data sets images of each data set could be segmented successfully\n",
@@ -1441,7 +1436,7 @@
     "considers nuclei and background equally.\n",
     "Still high weighted Dice scores are received even if many nuclei are missing because of the high impact of the\n",
     "background.\n",
-    "Differences of gt-images and the received results are partly caused\n",
+    "Differences of gt-images, and the received results are partly caused\n",
     "by mistakes in the gt-images which do not show nuclei on image borders.\n",
     "Because of these two problems, other evaluation methods should be considered in future research.\n",
     "\n",
@@ -1461,7 +1456,6 @@
    "cell_type": "markdown",
    "source": [
     "# Bibliography\n",
-    "\n",
     "1. Adams, R., Bischof, L. (1994). Seeded region growing. IEEE Transaction on Pattern Analysis and Machine Intelligence 16, 641-647\n",
     "1. Lin, Z., Jin, J., and Talbot, H. (2000). Unseeded region growing for 3D image segmentation. In Selected papers from\n",
     "the Pan-Sydney workshop on Visualisation - Volume 2 (Sydney, Australia: Australian Computer Society, Inc.), pp. 31–37.\n",
