--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -1059,10 +1059,21 @@
     "\n",
     "### Final results\n",
     "Below the image dna-42 of the NIH3T3 data set is shown (first image).\n",
-    "Seeded (second image) and unseeded (fourth image) region growing were performed.\n",
     "For seeded region growing bright spots with border were removed (130,60,30) and a 3x3 gaussian filter was used.\n",
-    "---> Seeds 0.001, 5\n",
-    "---> Merged 0.1, 400"
+    "The normal image (left) and the gt-image for comparison (second), as well as the result of region growing\n",
+    "with the parameters 0.001 and 5 for seed detection(right) are shown in the first row.\n",
+    "As seen in the second row, merging led to problems.\n",
+    "The left image shows the result of clipping after merging with the parameters 0.057 and 200.\n",
+    "This led to a weighted Dice score of 0.68 because many cells in the upper fraction of the image were lost.\n",
+    "In the middle, the clipped image is seen after merging with 0.056 and 200.\n",
+    "The weighted Dice score decreased to 0.41 because the background is identified as two region.\n",
+    "The clipping however only defines the largest number as the background\n",
+    "and therefore defines the background region as a cell.\n",
+    "Manuel merging of the two background regions was conducted and slightly better results were obtained\n",
+    "with a weighted dice score of 0.71 meaning that still many cells are undetected.\n",
+    "The bright spots were another difficulty of this image.\n",
+    "Although the bright spot could be successfully removed in an image fragment,\n",
+    "the different background intensities prevented this on the whole image."
    ],
    "metadata": {
     "collapsed": false
@@ -1070,9 +1081,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "vis.results_nih3t3_seeded()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1083,12 +1096,31 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Although the bright spot could be successfully removed in an image fragment,\n",
-    "the different background intensities prevented this on the whole image.\n",
-    "--> Add results seeded and unseeded similar to second data set"
+    "For the unseeded region growing the following result was obtained.\n",
+    "The left image shows the result after unseeded region growing with the parameters 0.07 and 10000.\n",
+    "Again after merging, a median filter of the size 3 was used.\n",
+    "The clipped image is shown on the right.\n",
+    "The weighted Dice score is, which is ?? than the one for seeded region growing"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vis.results_nih3t3_unseeded()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
