--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -1067,8 +1067,7 @@
     "This led to a weighted Dice score of 0.68 because many cells in the upper fraction of the image were lost.\n",
     "In the middle, the clipped image is seen after merging with 0.056 and 200.\n",
     "The weighted Dice score decreased to 0.41 because the background is identified as two region.\n",
-    "The clipping however only defines the largest number as the background\n",
-    "and therefore defines the background region as a cell.\n",
+    "The intensity difference between the two regions in the background is similar to the difference between nuclei and the background on the left side. Merging the background was not possible without losing nuclei. Because the bright spots have a similar intensity to the background at the right removing them was also not possible\n",
     "Manuel merging of the two background regions was conducted and slightly better results were obtained\n",
     "with a weighted dice score of 0.71 meaning that still many cells are undetected.\n",
     "The bright spots were another difficulty of this image.\n",
@@ -1081,9 +1080,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "vis.results_nih3t3_seeded()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1113,16 +1114,12 @@
    "outputs": [],
    "source": [
     "vis.results_nih3t3_unseeded()"
-    "Although the bright spot could be successfully removed in an image fragment,\n",
-    "the different background intensities prevented this on the whole image. The background on the left side of the image\n",
-    "has similar intensities to the nuclei on the left side. The background could not be merged without losing many nuclei.\n",
-    "Because the bright spots have a similar intensity to the background at the right, if could not be removed for the same\n",
-    "reason. Choosing a lower intensity to set the bright spot on could help this, but would prevent the bright spot from\n",
-    "being merged to its neighboring background.\n",
-    "--> Add results seeded and unseeded similar to second data set"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
