--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -181,8 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -192,6 +201,8 @@
     "from Functions import seed_detection as sd\n",
     "from Functions import seeded_region_growing as srg\n",
     "from Functions import unseeded_region_growing as urg\n",
+    "from Functions import old_seeded_region_growing as old_srg\n",
+    "from Functions import old_unseeded_region_growing as old_urg\n",
     "from Functions import visualization as vis"
    ],
    "metadata": {
@@ -1364,14 +1375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\L\\PycharmProjects\\2021-topic-04-team-04\\Functions\\seed_detection.py:50: RuntimeWarning: overflow encountered in ubyte_scalars\n",
-      "  neighborhood_distance.append(np.float((img[p] - img[i, j]) / (img[p] + 0.000001)))\n"
+      "703 ms ± 11.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "6.44 s ± 99.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -1379,8 +1390,8 @@
     "image_intensity_small = sk.imread(\"Data/N2DH-GOWT1/img/t01.tif\")[300:350, 400:450]\n",
     "image_seeds = sd.seeds(image_intensity_small, 0.5)\n",
     "image_regions_from_seeds = sd.seed_merging(image_seeds)\n",
-    "#%timeit srg.region_growing(image_intensity_small, image_regions_from_seeds.copy())\n",
-    "#%timeit old_srg.region_growing(image_intensity_small, image_regions_from_seeds.copy())"
+    "%timeit srg.region_growing(image_intensity_small, image_regions_from_seeds.copy())\n",
+    "%timeit old_srg.region_growing(image_intensity_small, image_regions_from_seeds.copy())"
    ],
    "metadata": {
     "collapsed": false,
@@ -1408,11 +1419,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "664 ms ± 25.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "18.2 s ± 779 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
-    "#%timeit urg.unseeded_region_growing_algorithm(image_intensity_small, (0,0), 5)\n",
-    "#%timeit old_urg.old_unseeded_region_growing_algorithm(image_intensity_small, (0,0), 5)"
+    "%timeit urg.unseeded_region_growing_algorithm(image_intensity_small, (0,0), 5)\n",
+    "%timeit old_urg.old_unseeded_region_growing_algorithm(image_intensity_small, (0,0), 5)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1434,14 +1454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "761 ms ± 27.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "698 ms ± 33.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "723 ms ± 27.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "653 ms ± 6.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
