--- a/Report_Region_Growing.ipynb
+++ b/Report_Region_Growing.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -1048,8 +1048,7 @@
     "between nuclei and background.\n",
     "The nuclei in the darker part of the image have similar intensities to the background in the lighter part, what makes\n",
     "merging very difficult.\n",
-    "This has less impact on unseeded region growing because there regions are not limited to one nucleus. --> eventuell in\n",
-    "die andere Richtung argumentieren\n",
+    "This has less impact on unseeded region growing because there regions are not limited to one nucleus.\n",
     "\n",
     "### Final results\n",
     "Below the image dna-42 of the NIH3T3 data set is shown (first image).\n",
@@ -1321,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
